--- a/variables.html
+++ b/variables.html
@@ -11,7 +11,16 @@
         let numero2 = 8;
         let suma = numero1 + numero2;
 
-        document.write("El resultado de la suma es: " + suma);
+    let resta = numero1 - numero2;
+    let multiplicacion = numero1 * numero2;
+    let division = numero1 / numero2;
+
+        document.write("El resultado de la suma es: " + suma, "<br>");
+        document.write("El resultado de la resta es: " + resta, "<br>");
+        document.write("El resultado de la multiplicación es: " + multiplicacion, "<br>");
+        document.write("El resultado de la división es: " + division, "<br>");
+    
+
 
     </script>
 </body>
